--- a/package.json
+++ b/package.json
@@ -3,12 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
+    "@mui/x-data-grid": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "axios": "^0.21.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "4.6.0",
+    "chart.js": "3.2.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "gulp": "4.0.2",
+    "gulp-append-prepend": "1.0.9",
+    "http": "0.0.1-security",
+    "moment": "^2.29.3",
+    "node-sass": "^7.0.1",
+    "perfect-scrollbar": "1.5.1",
+    "pm2": "^5.1.1",
+    "qs": "^6.10.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-force-graph": "^1.41.12",
+    "react-json-view": "^1.21.3",
+    "react-native": "^0.68.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "readline": "^1.3.0",
+    "realm": "^10.7.0",
+    "socket.io": "^4.2.0",
+    "socket.io-client": "^4.2.0",
+    "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
