--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^12.0.0",
     "axios": "^0.21.3",
     "body-parser": "^1.19.0",
     "bootstrap": "4.6.0",
@@ -34,6 +34,7 @@
     "react-scripts": "5.0.1",
     "readline": "^1.3.0",
     "realm": "^10.7.0",
+    "request": "^2.88.2",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0",
     "styled-components": "^5.3.5",
